update app added tenant flow in frontend and backend
